# windots

./: .gitignore  Cargo.toml  Makefile  README.md  book.toml  build.nix  build.rs  flake.nix  schema.json
.woodpecker/: check.yml  docs.yml  flake-lock-update.yml  nix-build.yml  update-deps.yml
benches/: backends.rs  colorspaces.rs  dl.sh  util.in
completions/: _wallust  _wallust.ps1  wallust.bash  wallust.elv  wallust.fish
docs/: 404.md  README.md  SUMMARY.md  contribute.md  intro.md  packaging-make.md  packaging.md  pywal_replacement.md  ss.md  v3.md
docs/config/: README.md  example.md  template.md
docs/installation/: README.md  distro.md  src.md
docs/parameters/: README.md  alpha.md  backend-table.md  backend.md  check_contrast.md  colorspace-table.md  colorspace.md  env_vars.md  fallback_generator.md  palette-table.md  palette.md  saturation.md  threshold.md
docs/templates/: README.md  example.md  filters.md  pywal.md  syntax.md  variables.md
installer/: README.md  install.ps1
man/: wallust-cs.1  wallust-run.1  wallust-theme.1  wallust.1  wallust.5
src/: cache.rs  colors.rs  config.rs  lib.rs  main.rs  sequences.rs  themes.rs
src/args/: migrate.rs  mod.rs
src/backends/: fast_resize.rs  full.rs  kmeans.rs  mod.rs  resized.rs  thumb.rs  wal.rs
src/billgates/: background.rs  glazewm.rs  mod.rs  zebar.rs
src/colorspaces/: fallback_generator.rs  lab.rs  lch.rs  lchansi.rs  mod.rs  rgb.rs  util.rs
src/palettes/: ansidark.rs  dark.rs  harddark.rs  light.rs  mod.rs  softdark.rs  softlight.rs
src/presets/: mod.rs  pywal.rs
src/template/: colors.rs  jinja2.rs  mod.rs  pywal.rs
tests/: README.md  args.rs  cache.rs  completions.rs  docs.rs  jsonschema.rs  man.rs  template-jinja2.rs  template-pywal.rs
tests/pywal-templates-result/: colors  colors-kitty.conf  colors-konsole.colorscheme  colors-nqq.css  colors-oomox  colors-putty.reg  colors-speedcrunch.json  colors-sway  colors-themer.js  colors-tilix.json  colors-tty.sh  colors-vscode.json  colors-wal-dmenu.h  colors-wal-dwm.h  colors-wal-st.h  colors-wal-tabbed.h  colors-wal.vim  colors-waybar.css  colors.Xresources  colors.css  colors.hs  colors.json  colors.scss  colors.sh  colors.styl  colors.yml
tests/template/: mod.rs
themes/glazewm/: config.yaml
themes/glazewm/profiles/: default.yaml  work.yaml
themes/zebar/: cava-feeder.ps1
themes/zebar/zebar_neon_theme/: index.html  styles.css  zpack.json
