[package]
name = "wallust"
version = "3.4.0"
edition = "2021"
license = "MIT"
authors = [ "explosion-mental" ]
keywords = [ "cli", "template", "colorscheme", "theme" ]
categories = [ "command-line-utilities" ]
description = "Generate a 16 color scheme based on an image."
repository = "https://codeberg.org/explosion-mental/wallust"
homepage = "https://explosion-mental.codeberg.page/wallust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.16"
anyhow = "1.0.99"
image = "0.25.8"
owo-colors = "4.2"
toml = "0.9.5"
toml_edit = "0.23.4"
serde_json = "1.0.143"
shellexpand = "3.1"
glob = "0.3.3"
spinners = "4.1"
dirs = "6.0"
itertools = "0.14"
fast_image_resize = "5.3.0"
num-traits = "0.2"
kmeans_colors = { version = "0.7.0", default-features = false, features = ["palette_color"] }
palette = { version = "0.7", default-features = false, features = ["serializing"] }
walkdir = "2.5"

# Windows dependencies ( Set backround, glazewm, zebar )
windows = { version = "0.62", features = ["Win32_Security", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
wallpaper = "3"
serde = {version = "1.0", features = ["derive"]}
serde_yml = "0.0.12"

# replacement for fs::canonalize but handles way better windows paths
dunce = "1.0"

clap  = { version = "4.5.47", features = ["derive"] }
minijinja = { version = "2.12.0", features = ["loader"] }

# optionals
fastrand = { version = "2.3", optional = true }
wallust_themes = { version = "1.1", optional = true }

# for making the doc tables from comments in source code
documented = { version = "0.9.2", optional = true }
strum = { version = "0.27.2", features = ["derive"], optional = true }
schemars = { version = "1.0", optional = true }

[dev-dependencies]
tempfile = "3.22.0"
criterion = { version = "0.7", features = ["html_reports"] }
clap_complete = "4.5.57"
clap_mangen = "0.2.29"
dirs = "6.0"

[build-dependencies]
wallust_themes = "1.1"
clap        = { version = "4.5", default-features = false, features = ["std", "cargo"] }
vergen-git2 = { version = "1.0", default-features = false, features = ["cargo", "emit_and_set"] }

[features]
default = [ "themes" ]
# include built-in themes (~130K) <https://codeberg.org/explosion-mental/wallust-themes>
themes = [ "dep:fastrand", "dep:wallust_themes" ]

# build generated stuff, used for building man pages and completions
buildgen = [ "doc", "iter", "schema", "clap/cargo" ]
doc  = [ "dep:documented" ]
iter = [ "dep:strum" ]
schema = [ "dep:schemars" ]

[[bench]]
name = "backends"
harness = false
required-features = ["iter"]

[[bench]]
name = "colorspaces"
harness = false
required-features = ["iter"]

[profile.release]
incremental = false
strip = true
lto   = true # Seems to increase ~0.2 secs in speed..
